Creating Swagger files
