# swagger/handlers.go
@@ -16,8 +16,6 @@
 package handlers
 
 import (
-	"encoding/json"
-	"io"
 	"net/http"
 )
 
@@ -62,22 +60,31 @@ type User struct {
 	Active int `json:"active"`
 }
 
-// SliceToJSON encodes a slice with JSON records
-func SliceToJSON(slice interface{}, w io.Writer) error {
-	e := json.NewEncoder(w)
-	return e.Encode(slice)
-}
-
 type notAllowedHandler struct{}
 
 func (h notAllowedHandler) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
 	MethodNotAllowedHandler(rw, r)
 }
 
-// swagger:route DELETE / Anything EMPTY
-// Default Handler for everything that is not a match
+// swagger:route DELETE /delete/{id} DeleteUser deleteID
+// Delete a user given their ID.
+// The command should be issued by an admin user
 //
 // responses:
+// 200: noContent
+// 404: ErrorMessage
+
+// DeleteHandler is for deleting users based on user ID
+func DeleteHandler(rw http.ResponseWriter, r *http.Request) {
+
+}
+
+// swagger:route POST / DefaultHandler noContent
+// Default Handler for everything that is not a match.
+// Works with all HTTP methods
+//
+// responses:
+// 200: noContent
 // 404: ErrorMessage
 
 // DefaultHandler is for handling everything that is not a match
@@ -96,7 +103,7 @@ func MethodNotAllowedHandler(rw http.ResponseWriter, r *http.Request) {
 
 }
 
-// swagger:route GET /time time
+// swagger:route GET /time getTime
 // Return current time
 //
 // responses:
@@ -106,7 +113,7 @@ func MethodNotAllowedHandler(rw http.ResponseWriter, r *http.Request) {
 func TimeHandler(rw http.ResponseWriter, r *http.Request) {
 }
 
-// swagger:route POST /add user createUser
+// swagger:route POST /add UserInput createUser
 // Create a new User
 //
 // responses:
@@ -117,8 +124,8 @@ func TimeHandler(rw http.ResponseWriter, r *http.Request) {
 func AddHandler(rw http.ResponseWriter, r *http.Request) {
 }
 
-// swagger:route GET /getid user getUserInfo
-// Returns the ID of a User given their username
+// swagger:route GET /getid getUserId loggedInfo
+// Returns the ID of a User given their username and password
 //
 // responses:
 //	200: OK
@@ -138,6 +145,18 @@ func GetIDHandler(rw http.ResponseWriter, r *http.Request) {
 // LoginHandler is for updating the LastLogin time of a user
 // And changing the Active field to true
 func LoginHandler(rw http.ResponseWriter, r *http.Request) {
+}
+
+// swagger:route GET /logged logged getUserInfo
+// Returns a list of logged in users
+//
+// responses:
+// 200: UsersResponse
+// 400: BadRequest
+
+// LoggedUsersHandler returns the list of all logged in users
+func LoggedUsersHandler(rw http.ResponseWriter, r *http.Request) {
+
 }
 
 // Generic OK message returned as an HTTP Status Code
@@ -162,4 +181,36 @@ type BadRequest struct {
 	// Description of the situation
 	// in: body
 	Body int
+}
+
+// Generic noContent message returned as an HTTP Status Code
+// swagger:response noContent
+type noContent struct {
+	// Description of the situation
+	// in: body
+	Body int
+}
+
+// A list of Users
+// swagger:response UsersResponse
+type UsersResponseWrapper struct {
+	// A list of users
+	// in: body
+	Body []User
+}
+
+// swagger:parameters deleteID
+type idParamWrapper struct {
+	// The user id to be deleted
+	// in: path
+	// required: true
+	ID int `json:"id"`
+}
+
+// A User
+// swagger:parameters getUserInfo loggedInfo
+type UserInputWrapper struct {
+	// A list of users
+	// in: body
+	Body User
 }
